[tool.poetry]
name = "dm-tree"
version = "0.1.9"
description = "Tree is a library for working with nested data structures."
authors = ["DeepMind <tree-copybara@google.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/deepmind/tree"
repository = "https://github.com/deepmind/tree"
documentation = "https://github.com/deepmind/tree"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]
keywords = ["tree", "nest", "flatten"]
packages = [{include = "tree"}]

[tool.poetry.dependencies]
python = "^3.10"
absl-py = ">=0.6.1"
attrs = ">=18.2.0"
numpy = [
    {version = ">=1.21", python = "<3.10"},
    {version = ">=1.21.2", python = ">=3.10,<3.11"},
    {version = ">=1.23.3", python = ">=3.11,<3.12"},
    {version = ">=1.26.0", python = ">=3.12,<3.13"},
    {version = ">=2.1.0", python = ">=3.13"}
]
wrapt = ">=1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0", "cmake", "pybind11"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=tree",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=0",  # TODO: Increase to 80 once actual tests are added
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["tree"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/virtualenv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 0  # TODO: Increase to 80 once actual tests are added

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"